Added language params to category_service, commands_service and swagger's restful api Added language propertie to Category and Command Schema
