# db/models/Command.js
@@ -6,6 +6,7 @@ var Schema=mongoose.Schema;
 var command=new Schema(
     {
         category:{type:mongoose.Schema.Types.ObjectId, ref:"Category"},
+        language:{type: String, default: "ENG"},
         text:{type:String, default: NaN},
         detail: {type:String, default: NaN}
 
